refactor: adiciona CORS, tratamento de erro 404 e ordenacao na listagem